--- a/static/index.html
+++ b/static/index.html
@@ -152,8 +152,11 @@ function append_weibo(statuses) {
         $('.imageoverflow h1').text($('.weibo:first-child .weibo-user a').text());
         $('.imageoverflow p').text($('.weibo:first-child .weibo-text').text());
         $('.imageoverflow img').attr('src', $('.weibo:first-child .weibo-pic a').attr('href'));
+        $('.container').fadeOut('slow');
         $('.imageoverflow').fadeIn('slow');
+
     } else {
+        $('.container').fadeIn('slow');
         $('.imageoverflow').fadeOut('slow');
     }
 
