--- a/static/index.html
+++ b/static/index.html
@@ -148,7 +148,7 @@ function append_weibo(statuses) {
     });
     $('#weibo-list').prepend(L.join('\n'));
     $('.weibo:gt(4)').remove();
-    if ($('.weibo:first-child .weibo-pic a')) {
+    if ($('.weibo:first-child .weibo-pic a').attr('href')) {
         $('.imageoverflow h1').text($('.weibo:first-child .weibo-user a').text());
         $('.imageoverflow p').text($('.weibo:first-child .weibo-text').text());
         $('.imageoverflow img').attr('src', $('.weibo:first-child .weibo-pic a').attr('href'));
